fix: fix service worker file
Description: add to home screen is not showing up and it seems to be site.js problem

Status: in progress - fixed event listener fetch

--- a/css/index.scss
+++ b/css/index.scss
@@ -89,7 +89,7 @@ nav.socialLink a {
 }
 
 .divider {
-  top: -10px;
+  top: -30px;
   z-index: 9999;
   border-top: 2px solid $color-theme;
 }
